Avoid blue border around cover image on Firefox.
git-svn-id: svn://svn.code.sf.net/p/xmm/svn/trunk/MeDs@1242 a86212f3-689c-4790-bbe1-32f6eb5c469e

--- a/MovieManager/HTML_templates/Simple_Virtue/Simple_Virtue.css
+++ b/MovieManager/HTML_templates/Simple_Virtue/Simple_Virtue.css
@@ -14,6 +14,11 @@
     border: 0px;
 }
 
+
+.cover img {
+    border: none;
+}
+
 .movieinfo { 
     float:left;
     margin-left: 10px;
